[package]
name = "bayesian_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.32.3", features = ["rayon"]}
rayon = "1.8.0"
rand_distr = "0.4.3"
rand = "0.8.5"
rv = "0.16.0"
statrs = "0.16.0"
streaming-iterator = "0.1.9"
